--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -15,7 +15,7 @@
                 <summary>Culture</summary>
                 <details>
                     <summary>Language</summary>
-                    <a href="#">Old Aramaic</a>
+                    <a href="./research/ethnology/linguistics/old_aramaic.html">Old Aramaic</a>
                     <a href="#">Official Aramaic</a>
                     <a href="#">Middle Aramaic</a>
                     <a href="#">Late Aramaic</a>
