--- a/research/ethnology/linguistics/old_aramaic.html
+++ b/research/ethnology/linguistics/old_aramaic.html
@@ -1,38 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Ethnology" template="../../"></script>
-
-<template>
-    <aside index="1">
-        <nav class="sidebar bcred w15 pt105" selective="true">
-
-            <details open>
-                <summary>Overview</summary>
-                <a href="./research/ethnology">1. Summary</a>
-                <a href="./research/ethnology/language.html">2. Language</a>
-                <a href="./research/ethnology/religion.html">3. Religion</a>
-            </details>
-
-            <details open>
-                <summary>Culture</summary>
-                <details>
-                    <summary>Language</summary>
-                    <a href="#">Old Aramaic</a>
-                    <a href="#">Official Aramaic</a>
-                    <a href="#">Middle Aramaic</a>
-                    <a href="#">Late Aramaic</a>
-                    <a href="#">Modern Aramaic</a>
-                </details>
-                <details>
-                    <summary>Religion</summary>
-                    <a href="#">Paganism</a>
-                    <a href="#">Christianity</a>
-                </details>
- 
-            </details>
-
-            <hr>
-        </nav>
-    </aside>
-</template>
+<script src="https://3el.github.io/front/dist/front.js" title="Old Aramaic" template="../../../"></script>
 
 <section class="pauto">
     <h1>Old Aramaic</h1>
