--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
     </section>
     <section class="mt2">
         <h2>History</h2>
-        <p>The Aramean Institute was established in late 2020 by Josef Gabrielsson from Sweden.</p>
+        <p>The Aramean Institute was established in late 2020 by Josef Gabrielsson in Sweden.</p>
     </section>
     <section class="mt2">
         <h2>Principles</h2>
@@ -49,7 +49,7 @@
     <section class="mt2">
         <h2>Financing</h2>
         <p>The Aramean Institute is a nonprofit institution in which no part of the organization's income is distributed to its members, directors, or officers.</p>
-        <p>The institute is fully supported by its members and Aramean organizations located in different parts of the world.</p>
+        <p>We rely on the generous financial support of individuals and organizations to keep the Aramean Institute running.</p>
     </section>
     <section class="mt2">
         <h2>Contributors</h2>
