--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <section>
             
             <article class="white w70">
-                <h1 class="f22">Aram and Israel relations</h1>
+                <h1 class="fs20">Aram and Israel relations</h1>
                 <h3 class="beige tshade1">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
                 <a href="article/aram-israel-relations.html" class="button p1 bcyellow red mt2 br05">Read more</a>
             </article>
@@ -22,7 +22,7 @@
         <section>
 
             <article class="white w70">
-                <h1 class="f22">Kaldu-Arameans</h1>
+                <h1 class="fs20">Kaldu-Arameans</h1>
                 <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
                 <a href="article/kaldu-arameans-in-babylon.html" class="button p1 bcyellow red mt2 br05">Read more</a>
             </article>
