--- a/contribute/index.html
+++ b/contribute/index.html
@@ -11,7 +11,7 @@
 
 <section class="pauto wc_xxl">
     <article>
-        <h4>Your contribution and support makes a difference!</h4>
+        <h4 class="fs16 mb1">Your contribution and support makes a difference!</h4>
         <p>Consider supporting the valuable work that the Aramean Institute does by donating or sharing with others who want to help.</p>
         <br>
         <form action="https://www.paypal.com/donate" method="post" target="_blank">
