--- a/footer.html
+++ b/footer.html
@@ -6,5 +6,5 @@
     </figure>
     <hr class="mt1 bcred shade1">
     <a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
-    
+    <a href="https://www.linkedin.com/company/75075116" target="_blank"><i class="icon48 white">&#13260;</i></a>
 </section>
