--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,11 @@
 <section class="wc_xxl db tac">
     <a class="pt2" href="about/">About</a> &middot; <a href="policy/privacy/">Privacy</a> &middot; <a href="policy/cookie/">Cookie</a>
     <hr class="mt1 bcred shade1">
-    <figure class="flc pauto">
-        <img src="assets/img/logo_red95.png" class="w50p">
-    </figure>
-    <hr class="mt1 bcred shade1">
-    <a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
+     <a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
     <a href="https://www.linkedin.com/company/75075116" target="_blank"><i class="icon48 white">&#13260;</i></a>
+    <hr class="mt1 bcred shade1">
+   
+    <figure class="flc wc_xm pauto">
+        <img src="assets/img/logo_red95.png" class="w70p">
+    </figure>
 </section>
