--- a/research/ethnology/linguistics/old_aramaic.html
+++ b/research/ethnology/linguistics/old_aramaic.html
@@ -5,7 +5,7 @@
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#">Research</a></li>
-            <li><a href="#">Ethnology</a></li>
+            <li><a href="./research/ethnology">Ethnology</a></li>
             <li><a href="#">Linguistics</a></li>
             <li>Old Aramaic</li>
         </ol>
