--- a/research/ethnology/religion.html
+++ b/research/ethnology/religion.html
@@ -5,7 +5,7 @@
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#">Research</a></li>
-            <li><a href="#">Ethnology</a></li>
+            <li><a href="./research/ethnology">Ethnology</a></li>
             <li>Relgion</li>
         </ol>
     </nav>
