--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a href="development/technology" key="3">Technology</a>
                     <hr class="p0">
                 </nav>
-                <nav class="sidebar">
+                <nav class="sidebar gaph2-">
                     <a href="contribute/" key="2">Contribute</a>
                     <a class="pr2" href="contact/" key="3">Contact</a>
                     <a class="pr2" href="faq/" key="3">FAQ</a>
