--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -1,6 +1,7 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Software Technology" template="../../"></script>
 
-<section class="pauto">
+
+<div class="alert banner shade1 br0 pauto bcred white-">
     <h1>Software Technology</h1>
     <nav class="crumbs pointer pt05">
         <ol>
@@ -9,8 +10,10 @@
             <li>Overview</li>
         </ol>
     </nav>
+</div>
 
-    <article class="mt2 mb2">
+<section class="pauto">
+    <article class="mb2">
         More action and less talk. We produce important software technology that impacts the society.
     </article>
 
