--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -1,5 +1,9 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Software Technology" template="../../"></script>
 
+<template>
+    <aside index="0"></aside>
+    <aside index="1"></aside>
+</template>
 
 <div class="alert banner shade1 br0 pauto bcred white-">
     <h1>Software Technology</h1>
