--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -16,6 +16,7 @@
 
     <article class="mt2">
         <p class="fwb">Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire.</p>
+        <p>The Chaldeans formed a powerful alliance with the Medes and others to overthrow the harsh Assyrian rulers.
         <br>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-12, Last update: 2021-01-12</small>
