--- a/development/art/index.html
+++ b/development/art/index.html
@@ -19,7 +19,7 @@
 
     <div json="true" iterate="arts" datasource="../../../assets/json/arts.json" class="box cards gut3- br05- bcwhite- border- tac">
         <figure class="p1">
-            <img src="" jsonbefore="../../../" jsonget="image">
+            <img class="w100" src="" jsonbefore="../../../" jsonget="image">
             <h5 jsonget="title"></h5>
             <h7 jsonget="summary"></h7>
         </figure>
