--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                     <hr class="p0">
                     <a href="development/technology" key="3">Technology</a>
                     <hr class="p0">
+                    <a href="development/art" key="3">Art</a>
+                    <hr class="p0">
                 </nav>
                 <nav class="sidebar gaph2-">
                     <a href="contribute/" key="2">Contribute</a>
