--- a/research/ethnology/linguistics/old_aramaic.html
+++ b/research/ethnology/linguistics/old_aramaic.html
@@ -12,7 +12,7 @@
     </nav>
 
     <article class="mt2">
-        <p>Old Aramaic refers to the most punctual phase of the Aramaic language, known from the engravings found since the 19th century.</p>        
+        <p>Old Aramaic (c. 900 BC) refers to the most punctual phase of the Aramaic language, known from the engravings found since the 19th century.</p>        
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-13, Last update: 2021-01-13</small>
     </article>
