--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -11,7 +11,7 @@
     </nav>
     
     <section class="mt2">
-    <p>Aramaic is a language or group of languages that belong to the Semitic language family. The language has gone through 5 development phases, Old Aramaic, Official Aramaic, Middle Aramaic, Late Aramaic, and Modern Aramaic according to Joseph Augustine Fitzmyer.</p>
+    <p>Aramaic is a language or group of languages that belong to the Semitic language family. The language has gone through 5 development phases according to the analysis done by Joseph Augustine Fitzmyer and Aaron Butts: Old Aramaic, Official Aramaic, Middle Aramaic, Late Aramaic, and Modern Aramaic.</p>
     <hr class="mt2 bcblack">
     <small class="gray">Published: 2020-09-01, Last update: 2020-12-26</small>
     </section>
