--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <base env="local:/;prod:/">
-    <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
-    <!--<link type="text/css" href="http://localhost:8888/dist/front.css" rel="stylesheet">-->
+    <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
+    <!--<link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">-->
     <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
     <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
     <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
@@ -15,7 +15,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Z8JXR2XX0"></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-4Z8JXR2XX0')</script>
     <script data-ad-client="ca-pub-4495380127736526" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-</head<link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
+</head>
 <body class="bg">
 
     <header>
