--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:url" content="{{ %currenturl }}" />
+    <meta property="og:type" content="{{ template%type }}" />
+    <meta property="og:title" content="{{ meta%title }}" />
+    <meta property="og:description" content="{{ template%description }}" />
+    <meta property="og:image" content="{{ template%image }} " />
     <base env="local:/;prod:/">
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
-    <!--<link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">-->
-    <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
-    <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
+    <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
+    <!--<link type="text/css" href="http://localhost:8888/dist/front.css" rel="stylesheet">-->
+    <!--<link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">-->
+    <!--<link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">-->
     <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
     <!--<script src="http://localhost:8888/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Z8JXR2XX0"></script>
