--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
     <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
     <!--<link type="text/css" href="http://localhost:8888/dist/front.css" rel="stylesheet">-->
-    <!--<link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">-->
-    <!--<link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">-->
+    <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
+    <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
     <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
     <!--<script src="http://localhost:8888/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Z8JXR2XX0"></script>
