--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="{{ ;currentUrl }}" />
     <meta property="og:type" content="{{ template;type }}" />
     <meta property="og:title" content="{{ meta;title }}" />
-    <meta property="og:description" content="{{ template;description }}" />
+    <meta property="og:description" content="The Aramean Institute is a worldwide multi-institute, researching different areas, developing technology, collecting data, publishing work, offering expertise, and educating about the Aramean people." />
     <meta property="og:image" content="{{ template;image }} " />
     <base env="local:/;prod:/">
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
