--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:url" content="{{ ;currentUrl }}" />
     <meta property="og:type" content="{{ template;type }}" />
-    <meta property="og:title" content="{{ meta;title }}" />
+    <meta property="og:title" content="{{ ;title }}" />
     <meta property="og:description" content="The Aramean Institute is a worldwide multi-institute." />
     <meta property="og:image" content="{{ template;image }} " />
     <base env="local:/;prod:/">
