--- a/research/ethnology/religion.html
+++ b/research/ethnology/religion.html
@@ -1,12 +1,12 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Religion" template="../../"></script>
 
 <article class="pauto">
-    <h1>Religion</h1>
+    <h1 globalize="religion">Religion</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#">Research</a></li>
             <li><a href="./research/ethnology">Ethnology</a></li>
-            <li>Relgion</li>
+            <li globalize="religion">Relgion</li>
         </ol>
     </nav>
     
