--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
         </ul>
     </section>
     <section class="mt2">
-        <h2>Vision</h2>
+        <h2 globalize="vision">Vision</h2>
         <p>Our vision is to populate, protect, preserve the continuous ancient Aramean heritage and aim to unite all Syrian (Syriac) people under the Aramean name through education and scientific knowledge.</p>
     </section>
     <section class="mt2">
