--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--<link type="text/css" href="http://localhost:8888/dist/front.css" rel="stylesheet">-->
     <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
     <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
-    <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
+    <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;globalize"></script>
     <!--<script src="http://localhost:8888/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Z8JXR2XX0"></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-4Z8JXR2XX0')</script>
