--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
         <p>The Aramean Institute is a worldwide multi-institute, researching different areas, developing technology, collecting data, publishing work, offering expertise, and educating about the Aramean people.</p>    
     </section>
     <section class="mt2">
-        <h2>Mission</h2>
+        <h2 globalize="mission">Mission</h2>
         <p>Our mission is to connect and build long-term relationships with companies, organizations, and private people from all nations, provide reliable-trusted knowledge and data, offer free services, and share our expertise about or related to the Aramean people.</p>
         <br>
         <p>The Aramean Institute's standard work approaches are:</p>
@@ -32,7 +32,7 @@
         <p>Our vision is to populate, protect, preserve the continuous ancient Aramean heritage and aim to unite all Syrian (Syriac) people under the Aramean name through education and scientific knowledge.</p>
     </section>
     <section class="mt2">
-        <h2>History</h2>
+        <h2 globalize="history">History</h2>
         <p>The Aramean Institute was established in late 2020 by Josef Gabrielsson in Sweden.</p>
     </section>
     <section class="mt2">
