--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
             
         </form>
         <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
-            <a class="fr bcred yellow p1" href="contribute/" key="2">Contribute</a>
-            <a class="pr2" href="contact/" key="3">Contact</a>
+            <a class="fr bcred yellow p1" href="contribute/" key="2" globalize="contribute">Contribute</a>
+            <a class="pr2" href="contact/" key="3" globalize="contact">Contact</a>
             <!--<a class="pr2" href="press/" key="3">Press</a>-->
-            <a class="pr2" href="faq/" key="3">FAQ</a>
-            <a class="pr2" href="about/" key="3">About</a>
+            <a class="pr2" href="faq/" key="3" globalize="faq">FAQ</a>
+            <a class="pr2" href="about/" key="3" globalize="about">About</a>
         </nav>
     </header>
 
     <nav class="topbar bcwhite shade1 h4_5 gap2- sred-" selective="true">
         <a href="#menu" class="button xl_du red- p0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
-        <a href="research/ethnology" key="2">Ethnology</a>
-        <a href="collection/statistics" key="1">Statistics</a>
-        <a href="development/technology" key="3">Technology</a>
-        <a href="development/art" key="3">Art</a>
+        <a href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
+        <a href="collection/statistics" key="1" globalize="statistics">Statistics</a>
+        <a href="development/technology" key="3" globalize="technology">Technology</a>
+        <a href="development/art" key="3" globalize="art">Art</a>
 
         <div id="menu" class="modal menu bcred br0">
             <nav class="topbar flc0 shade h4_5 gap2- bcblack01 sblack-">
@@ -52,20 +52,20 @@
             </nav>
             <section>
                 <nav class="sidebar pt2 pb2 w100 fs13 gaph2- red- bcred pointer afr">
-                    <a href="research/ethnology" key="2">Ethnology</a>
+                    <a href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
                     <hr class="p0">
-                    <a href="collection/statistics" key="1">Statistics</a>
+                    <a href="collection/statistics" key="1" globalize="statistics">Statistics</a>
                     <hr class="p0">
-                    <a href="development/technology" key="3">Technology</a>
+                    <a href="development/technology" key="3" globalize="technology">Technology</a>
                     <hr class="p0">
-                    <a href="development/art" key="3">Art</a>
+                    <a href="development/art" key="3" globalize="art">Art</a>
                     <hr class="p0">
                 </nav>
                 <nav class="sidebar gaph2-">
-                    <a href="contribute/" key="2">Contribute</a>
-                    <a class="pr2" href="contact/" key="3">Contact</a>
-                    <a class="pr2" href="faq/" key="3">FAQ</a>
-                    <a class="pr2" href="about/" key="3">About</a>
+                    <a href="contribute/" key="2" globalize="contribute">Contribute</a>
+                    <a class="pr2" href="contact/" key="3" globalize="contact">Contact</a>
+                    <a class="pr2" href="faq/" key="3" globalize="faq">FAQ</a>
+                    <a class="pr2" href="about/" key="3" globalize="about">About</a>
                 </nav>
             </section>
         </div>
