--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -5,7 +5,7 @@
         <nav class="sidebar bcred w15 pt105" selective="true">
 
             <details open>
-                <summary>Overview</summary>
+                <summary globalize="overview">Overview</summary>
                 <a href="./research/ethnology">1. Summary</a>
                 <a href="./research/ethnology/language.html">2. Language</a>
                 <a href="./research/ethnology/religion.html">3. Religion</a>
@@ -14,7 +14,7 @@
             <details open>
                 <summary>Culture</summary>
                 <details>
-                    <summary>Language</summary>
+                    <summary globalize="language">Language</summary>
                     <a href="./research/ethnology/linguistics/old_aramaic.html">Old Aramaic</a>
                     <a href="#">Official Aramaic</a>
                     <a href="#">Middle Aramaic</a>
@@ -22,9 +22,9 @@
                     <a href="#">Modern Aramaic</a>
                 </details>
                 <details>
-                    <summary>Religion</summary>
-                    <a href="#">Paganism</a>
-                    <a href="#">Christianity</a>
+                    <summary globalize="religion">Religion</summary>
+                    <a href="#" globalize="paganism">Paganism</a>
+                    <a href="#" globalize="christianity">Christianity</a>
                 </details>
  
             </details>
@@ -35,12 +35,12 @@
 </template>
 
 <section class="pauto">
-    <h1>Overview</h1>
+    <h1 globalize="overview">Overview</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Research</a></li>
-            <li><a href="#">Ethnology</a></li>
-            <li>Overview</li>
+            <li><a href="#" globalize="research">Research</a></li>
+            <li><a href="#" globalize="ethnology">Ethnology</a></li>
+            <li globalize="overview">Overview</li>
         </ol>
     </nav>
 
