--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -7,8 +7,8 @@
             <details open>
                 <summary globalize="overview">Overview</summary>
                 <a href="./research/ethnology">1. Summary</a>
-                <a href="./research/ethnology/language.html">2. Language</a>
-                <a href="./research/ethnology/religion.html">3. Religion</a>
+                <a href="./research/ethnology/language.html" globalize="language">2. Language</a>
+                <a href="./research/ethnology/religion.html" globalize="religion">3. Religion</a>
             </details>
 
             <details open>
