--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -1,12 +1,12 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Language" template="../../"></script>
 
 <article class="pauto">
-    <h1>Language</h1>
+    <h1 globalize="language">Language</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Research</a></li>
-            <li><a href="./research/ethnology">Ethnology</a></li>
-            <li>Language</li>
+            <li><a href="#" globalize="research">Research</a></li>
+            <li><a href="./research/ethnology" globalize="ethnology">Ethnology</a></li>
+            <li globalize="language">Language</li>
         </ol>
     </nav>
     
