--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>About Us</h1>
+    <h1 globalize="about_us">About Us</h1>
 </div>
 
 <article class="pauto wc_xxl">
@@ -36,7 +36,7 @@
         <p>The Aramean Institute was established in late 2020 by Josef Gabrielsson in Sweden.</p>
     </section>
     <section class="mt2">
-        <h2>Principles</h2>
+        <h2 globalize="principles">Principles</h2>
         <p>The Aramean Institute follows the principles of Science and has built the foundation on academic studies made by reliable, respected, and world-leading scholars.
         <br><br>
         <p>The institute rejects:</p>
@@ -47,12 +47,12 @@
         </ul>
     </section>
     <section class="mt2">
-        <h2>Financing</h2>
+        <h2 globalize="financing">Financing</h2>
         <p>The Aramean Institute is a nonprofit institution in which no part of the organization's income is distributed to its members, directors, or officers.</p>
         <p>We rely on the generous financial support of individuals and organizations to keep the Aramean Institute running.</p>
     </section>
     <section class="mt2">
-        <h2>Contributors</h2>
+        <h2 globalize="contributors">Contributors</h2>
         <p>Syriacist and Aramaicist</p>
     </section>
 </article>
