--- a/research/ethnology/linguistics/old_aramaic.html
+++ b/research/ethnology/linguistics/old_aramaic.html
@@ -1,13 +1,13 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Old Aramaic" template="../../../"></script>
 
 <section class="pauto">
-    <h1>Old Aramaic</h1>
+    <h1 globalize="old_aramaic">Old Aramaic</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Research</a></li>
-            <li><a href="./research/ethnology">Ethnology</a></li>
-            <li><a href="#">Linguistics</a></li>
-            <li>Old Aramaic</li>
+            <li><a href="#" globalize="research">Research</a></li>
+            <li><a href="./research/ethnology" globalize="ethnology">Ethnology</a></li>
+            <li><a href="#" globalize="linguistics">Linguistics</a></li>
+            <li globalize="old_aramaic">Old Aramaic</li>
         </ol>
     </nav>
 
