--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -15,11 +15,11 @@
                 <summary>Culture</summary>
                 <details>
                     <summary globalize="language">Language</summary>
-                    <a href="./research/ethnology/linguistics/old_aramaic.html">Old Aramaic</a>
-                    <a href="#">Official Aramaic</a>
-                    <a href="#">Middle Aramaic</a>
-                    <a href="#">Late Aramaic</a>
-                    <a href="#">Modern Aramaic</a>
+                    <a href="./research/ethnology/linguistics/old_aramaic.html" globalize="old_aramaic">Old Aramaic</a>
+                    <a href="#" globalize="official_aramaic">Official Aramaic</a>
+                    <a href="#" globalize="middle_aramaic">Middle Aramaic</a>
+                    <a href="#" globalize="late_aramaic">Late Aramaic</a>
+                    <a href="#" globalize="modern_aramaic">Modern Aramaic</a>
                 </details>
                 <details>
                     <summary globalize="religion">Religion</summary>
