--- a/research/ethnology/religion.html
+++ b/research/ethnology/religion.html
@@ -4,8 +4,8 @@
     <h1 globalize="religion">Religion</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Research</a></li>
-            <li><a href="./research/ethnology">Ethnology</a></li>
+            <li><a href="#" globalize="research">Research</a></li>
+            <li><a href="./research/ethnology" globalize="ethnology">Ethnology</a></li>
             <li globalize="religion">Relgion</li>
         </ol>
     </nav>
