--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -6,7 +6,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Statistics</h1>
+    <h1 globalize="statistics">Statistics</h1>
 </div>
 
 <section class="pauto">
