--- a/development/art/index.html
+++ b/development/art/index.html
@@ -6,7 +6,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto bcred white-">
-    <h1>Art</h1>
+    <h1 globalize="art">Art</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#">Development</a></li>
