--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -6,12 +6,12 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto bcred white-">
-    <h1>Software Technology</h1>
+    <h1 globalize="software_technology">Software Technology</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Development</a></li>
-            <li><a href="#">Software Technology</a></li>
-            <li>Overview</li>
+            <li><a href="#" globalize="development">Development</a></li>
+            <li><a href="#" globalize="software_technology">Software Technology</a></li>
+            <li globalize="overview">Overview</li>
         </ol>
     </nav>
 </div>
