--- a/press/index.html
+++ b/press/index.html
@@ -6,7 +6,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Press</h1>
+    <h1 globalize="press">Press</h1>
 </div>
 
 <section class="pauto">
