--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Contact Us</h1>
+    <h1 globalize="contact_us">Contact Us</h1>
 </div>
 
 <article class="pauto wc_xxl">
@@ -31,8 +31,8 @@
                 </div>
 
                 <div class="gap1-">
-                    <button class="fr outlined" type="reset">Reset</button>
-                    <button type="submit">Send message</button>
+                    <button class="fr outlined" type="reset" globalize="reset">Reset</button>
+                    <button type="submit" globalize="send_message">Send message</button>
                 </div>
         
         </form>
