--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
             <article class="white w70">
                 <h1 class="fs17" jsonget="title"></h1>
                 <h3 class="beige tshade1" jsonget="summary"></h3>
-                <a href="#" jsonget="link" class="button p1 bcyellow red mt2 br05">Read more</a>
+                <a href="#" jsonget="link" class="button p1 bcyellow red mt2 br05" globalize="read_more">Read more</a>
             </article>
 
             <figure>
