--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -49,7 +49,7 @@
         <br><br>
         <p>The terms Aramu, Armi, and Arame, appears for the first time in the Ebla tablets (c. 2300 BC), indicating a region in Upper Mesopotamia where Arameans have settled. The first explicit mentioning of the Arameans as a people occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I (c. 1100 BC).</p>
         <br>
-        <p>Aramaic is the language of the Aramean people which once was the lingua franca of the ancient Near East, replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is the oldest Semitic language in the family and one of the world's oldest recorded living languages (c. 900 BC), predating Hebrew, Amharic, and Arabic</p>
+        <p>Aramaic is the language of the Aramean people which once was the lingua franca of the ancient Near East, replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is the oldest Semitic language in the family and one of the world's oldest recorded living languages (c. 900 BC), predating Hebrew, Amharic, and Arabic.</p>
         <br>
         <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered around the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
         <br>
