--- a/development/arts/index.html
+++ b/development/arts/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Art" template="../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Arts" template="../../"></script>
 
 <template>
     <aside index="0"></aside>
@@ -6,11 +6,11 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto bcred white-">
-    <h1 globalize="art" globalize="art">Art</h1>
+    <h1 globalize="arts">Arts</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="development">Development</a></li>
-            <li><a href="#" globalize="art">Art</a></li>
+            <li><a globalize="arts">Arts</a></li>
         </ol>
     </nav>
 </div>
@@ -22,6 +22,8 @@
             <img class="w100 pb1" src="" jsonbefore="../../../" jsonget="image">
             <h5 jsonget="title"></h5>
             <h7 jsonget="summary"></h7>
+            <small jsonget="designer" jsonbefore="Designed by: "></small>
+            <small jsonget="adopted" jsonbefore="Adopted: "></small>
         </figure>
     </div>
 
