--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="research/ethnology" key="2" globalize="ethnology">Ethnology</a>
         <a href="collection/statistics" key="1" globalize="statistics">Statistics</a>
         <a href="development/technology" key="3" globalize="technology">Technology</a>
-        <a href="development/art" key="3" globalize="art">Art</a>
+        <a href="development/arts" key="3" globalize="arts">Arts</a>
 
         <div id="menu" class="modal menu bcred br0">
             <nav class="topbar flc0 shade h4_5 gap2- bcblack01 sblack-">
