--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -19,7 +19,7 @@
         <br>
         <p>Both Arameans and Hebrews (Israelites) are a Semitic race tracing their lineage back to Shem, son of Noah, but what ties their bound even stronger is Aram, son of Shem.</p>
         <br>
-        <p>Aram, the son of Shem, played a role in forming many nations and spreading his offsprings in the Middle East. He is regarded as being the ancestor of the Arameans and the Jewish people.</p>
+        <p>Aram, the son of Shem, played a role in forming many nations and spreading his offsprings in the Middle East. He is regarded as being the ancestor of the Arameans and the Hebrews.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-08, Last update: 2021-01-09</small>
     </article>
