--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,13 @@
 <section class="wc_xxl db tac">
-    <a class="pt2" href="about/">About</a> &middot; <a href="policy/privacy/">Privacy</a> &middot; <a href="policy/cookie/">Cookie</a>
+    <a class="pt2" href="about/" globalize="about">About</a> &middot; <a href="policy/privacy/" globalize="privacy">Privacy</a> &middot; <a href="policy/cookie/" globalize="cookie">Cookie</a>
+    &nbsp;<select onchange="globalizeChangeLanguage((this.options[this.selectedIndex].value))">
+        <option value="">English</option>
+        <option value="sv">Svenska</option>
+        <option value="arc">ܐܪܡܝܐ</option>
+    </select>
     <hr class="mt1 bcred shade1">
-     <a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
-    <a href="https://www.linkedin.com/company/75075116" target="_blank"><i class="icon48 white">&#13260;</i></a>
+     <a href="https://www.facebook.com/aramean.institute" target="_blank" alt="facebook"><i class="icon48 white">&#9429;</i></a>
+    <a href="https://www.linkedin.com/company/75075116" target="_blank" alt="LinkedIn"><i class="icon48 white">&#13260;</i></a>
     <hr class="mt1 bcred shade1">
    
     <figure class="flc wc_xm pauto">
