--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <hr class="p0">
                     <a href="development/technology" key="3" globalize="technology">Technology</a>
                     <hr class="p0">
-                    <a href="development/art" key="3" globalize="art">Art</a>
+                    <a href="development/arts" key="3" globalize="arts">Arts</a>
                     <hr class="p0">
                 </nav>
                 <nav class="sidebar gaph2-">
