--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
             <li>Developing free software related to the Arameans.</li>
             <li>Increasing the awareness of Arameans to the outside world.</li>
             <li>Guiding and supporting projects related to the Arameans.</li>
-            <li>Translate Aramaic to and from any other world language.</li>
+            <li>Translating Aramaic to and from any other world language.</li>
         </ul>
     </section>
     <section class="mt2">
