--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -9,7 +9,7 @@
     <h1>The Kaldu-Arameans in Babylon</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Article</a></li>
+            <li><a href="#" globalize="article">Article</a></li>
             <li>The Kaldu-Arameans in Babylon</li>
         </ol>
     </nav>
