--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -9,7 +9,7 @@
     <h1>Misstakes made in The Chronicles of Michael Rabo interpretation</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Article</a></li>
+            <li><a href="#" globalize="article">Article</a></li>
             <li>Misstakes made in The Chronicles of Michael Rabo interpretation</li>
         </ol>
     </nav>
