--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -9,7 +9,7 @@
     <h1>Aram and Israel relations</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Article</a></li>
+            <li><a href="#" globalize="article">Article</a></li>
             <li>Aram and Israel relations</li>
         </ol>
     </nav>
