--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<section class="hm100 bcred white dac">
+<section class="h100 bcred white dac">
     <nav class="slider tshade1 dc gap05-" json="true" iterate="articles" datasource="assets/json/articles.json">
         <div class="sl" skip><a onclick="alert('c')"><i class="icon64 bcblack02 d0">&#706;</i></a></div>
         <input type="radio" name="slider" id="slide{{ jsonget:id }}" if="{{ jsonget:id }};1;checked">
