--- a/about/index.html
+++ b/about/index.html
@@ -56,3 +56,5 @@
         <p>Syriacist and Aramaicist</p>
     </section>
 </article>
+
+<section include="./footer.html" class="bcred white white- p1"></section>
