--- a/policy/cookie/index.html
+++ b/policy/cookie/index.html
@@ -365,3 +365,5 @@
             policy@aramean.institute.</p>
     </article>
 </section>
+
+<section include="./footer.html" class="bcred white white- p1"></section>
