--- a/contribute/index.html
+++ b/contribute/index.html
@@ -16,8 +16,10 @@
         <br>
         <form action="https://www.paypal.com/donate" method="post" target="_blank">
             <input type="hidden" name="hosted_button_id" value="BAQWBFGZ83FVC" />
-            <input type="image" src="https://www.paypalobjects.com/en_US/SE/i/btn/btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+            <input type="submit" class="button bcred yellow" value="I want to donate">
         </form>
 
     </article>
 </section>
+
+<section include="./footer.html" class="bcred white white- p1"></section>
