--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -16,7 +16,9 @@
 
     <article class="mt2">
         <p class="fwb">Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire.</p>
-        <p>The Chaldeans formed a powerful alliance with the Medes and others to overthrow the harsh Assyrian rulers.
+        <p>The Chaldeans under ruler Nabopolassar of Neo-Babylon formed a powerful alliance (c. 620 BC) with the Persians, Medes, Scythians, Cimmerians, Israelites, and other tribes to overthrow the harsh Assyrian rulers and their long-lasting empire.</p>
+        <br>
+        <p>In 612 BC, the Assyrian city of Nineveh was besieged and sacked by the alliance after a brutal battle. The fall of Nineveh led to the destruction of the Neo-Assyrian Empire and the Assyrian people over the few years.</p>
         <br>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-12, Last update: 2021-01-12</small>
