--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -16,10 +16,15 @@
 
     <article class="mt2">
         <p class="fwb">Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire.</p>
-        <p>The Chaldeans under ruler Nabopolassar of Neo-Babylon formed a powerful alliance (c. 620 BC) with the Persians, Medes, Scythians, Cimmerians, Israelites, and other tribes to overthrow the harsh Assyrian rulers and their long-lasting empire.</p>
         <br>
-        <p>In 612 BC, the Assyrian city of Nineveh was besieged and sacked by the alliance after a brutal battle. The fall of Nineveh led to the destruction of the Neo-Assyrian Empire and the Assyrian people over the few years.</p>
+        <p>According to the Babylon Clay tablet found in the 19th century, the Assyrians and the Babylonians had a 12-year long struggle between Assyria and Babylon, as well as Assyrians having internal conflicts within Assyria itself. 
+        <br><br>In the tenth year of Nabopolassar (616 BC), the Babylonians defeated the Assyrian army and marched up the river, sacking Mane, Sahiri, and Baliḫu.
+        <br>One year after the victory, the Assyrians mustered their army recapturing their loss, and succeeding in driving the Babylonians back to Takritain. Nabopolassar stationed his army in the fortress of Takritain, where the two armies continued their battle until the Assyrians were beaten again and retreated to Assyria.
+        </p>
         <br>
+        <p>Nabopolassar (c. 614 BC) formed a powerful alliance with the Persians, Medes, Scythians, Cimmerians, Israelites, other tribes to overthrow the harsh Assyrian rulers and their long-lasting empire once in for all.</p>
+        <br>
+        <p>In 612 BC, the Assyrian city of Nineveh was besieged and sacked by the alliance after a brutal battle. The fall of Nineveh led to the destruction of the Neo-Assyrian Empire and the Assyrian people over a few years.</p><br>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-12, Last update: 2021-02-01</small>
     </article>
