--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <section class="wc_xxl db tac">
     <a class="pt2" href="about/" globalize="about">About</a> &middot; <a href="policy/privacy/" globalize="privacy">Privacy</a> &middot; <a href="policy/cookie/" globalize="cookie">Cookie</a>
     &nbsp;<select onchange="globalizeChangeLanguage((this.options[this.selectedIndex].value))">
-        <option value="">English</option>
+        <option value="en">English</option>
         <option value="sv">Svenska</option>
         <option value="arc">ܐܪܡܝܐ</option>
     </select>
