--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
         </form>
         <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
-            <a class="fr bcred yellow p1" href="contribute/" key="2" globalize="contribute">Contribute</a>
+            <a class="fr bcred yellow p1" href="contribute/" key="2" globalize="contribute"><i class="icon">&#9829;</i>Contribute</a>
             <a class="pr2" href="contact/" key="3" globalize="contact">Contact</a>
             <!--<a class="pr2" href="press/" key="3">Press</a>-->
             <a class="pr2" href="faq/" key="3" globalize="faq">FAQ</a>
