--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@
     <section>
         <form class="gaph2- mt2">
                 <div class="group">
-                <input class="outlined" type="text" placeholder="Full name">
+                <input class="outlined" type="text" globalize="full_name" placeholder="Full name">
                 </div>
                 <div class="group">
                 <select class="outlined">
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="group">
-                    <textarea id="message" class="w100 h10r outlined" placeholder="Message"></textarea>
+                    <textarea id="message" class="w100 h10r outlined" globalize="message" placeholder="Message"></textarea>
                 </div>
 
                 <div class="gap1-">
