--- a/footer.html
+++ b/footer.html
@@ -6,8 +6,9 @@
         <option value="arc">ܐܪܡܝܐ</option>
     </select>
     <hr class="mt1 bcred shade1">
-     <a href="https://www.facebook.com/aramean.institute" target="_blank" alt="facebook"><i class="icon48 white">&#9429;</i></a>
+    <a href="https://www.facebook.com/aramean.institute" target="_blank" alt="facebook"><i class="icon48 white">&#9429;</i></a>
     <a href="https://www.linkedin.com/company/75075116" target="_blank" alt="LinkedIn"><i class="icon48 white">&#13260;</i></a>
+    <a href="https://twitter.com/Aram_Institute" target="_blank" alt="Twitter"><i class="icon48 white">&#9443;</i></a>
     <hr class="mt1 bcred shade1">
    
     <figure class="flc wc_xm pauto">
