--- a/faq/index.html
+++ b/faq/index.html
@@ -6,7 +6,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Frequently Asked Questions</h1>
+    <h1 globalize="faq">Frequently Asked Questions</h1>
 </div>
 
 <article class="pauto">
