--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
 <section class="light">
     <article class="pauto wm70">
-        <div class="box cards m1- p1- br05- bcwhite- border- bo0- tac" json="true" iterate="articles" datasource="assets/json/articles.json">
+        <div class="box cards m1- p1- br05- bcwhite- border- bo0- tac md_gtc2 xl_gtc3 xxl_gtc3 xxxl_gtc4" json="true" iterate="articles" datasource="assets/json/articles.json">
             <figure class="shade0 p1">
                 <a href="#" jsonget="link">
                     <img jsonget="thumbnail" class="w100">
