--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Software Technology" template="../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Software Technology" template="../../index"></script>
 
 <template>
     <aside index="0"></aside>
@@ -25,7 +25,7 @@
         <figure class="p1">
             <h5 jsonget="title"></h5>
             <h7 jsonget="summary"></h7>
-            <i class="icon">🔗</i><a jsonget="link" target="_blank" href="#">Go to project</a>
+            <a jsonget="link" target="_blank" href="#"><i class="icon">🔗</i>Go to project</a>
         </figure>
     </div>
 
