--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Statistics" template="../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Statistics" template="../../index"></script>
     
 <template>
     <aside index="0"></aside>
@@ -13,4 +13,11 @@
     <article>
         Not available!
     </article>
+
+    <h2>Linguistics</h2>
+    Traced Aramaic words in world languages
+    <ul>
+        <li>Etymology</li>
+    </ul>
+
 </section>
