--- a/development/arts/index.html
+++ b/development/arts/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Arts" template="../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Arts" template="../../index"></script>
 
 <template>
     <aside index="0"></aside>
