--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="The Kaldu-Arameans in Babylon" template="../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="The Kaldu-Arameans in Babylon" template="../index"></script>
 
 <template>
     <aside index="0"></aside>
