--- a/faq/index.html
+++ b/faq/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Frequently Asked Questions​" template="../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Frequently Asked Questions​" template="../index"></script>
 
 <template>
     <aside index="0"></aside>
