--- a/policy/cookie/index.html
+++ b/policy/cookie/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Cookie Policy" template="../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Cookie Policy" template="../../index"></script>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
     <h1>Cookie Policy</h1>
