--- a/policy/privacy/index.html
+++ b/policy/privacy/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Privacy Policy" template="../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Privacy Policy" template="../../index"></script>
 
 <template>
     <aside index="1">
