--- a/research/ethnology/linguistics/old_aramaic.html
+++ b/research/ethnology/linguistics/old_aramaic.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Old Aramaic" template="../../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Old Aramaic" template="../../../index"></script>
 
 <section class="pauto">
     <h1 globalize="old_aramaic">Old Aramaic</h1>
