--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Aram and Israel relations" template="../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Aram and Israel relations" template="../index"></script>
 
 <template>
     <aside index="0"></aside>
