--- a/press/index.html
+++ b/press/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Press" template="../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Press" template="../index"></script>
     
 <template>
     <aside index="0"></aside>
