--- a/research/ethnology/religion.html
+++ b/research/ethnology/religion.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Religion" template="../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Religion" template="../../index"></script>
 
 <article class="pauto">
     <h1 globalize="religion">Religion</h1>
