--- a/development/arts/index.html
+++ b/development/arts/index.html
@@ -17,7 +17,7 @@
 
 <section class="pauto">
 
-    <div json="true" iterate="arts" datasource="../../../assets/json/arts.json" class="box cards gut3- br05- bcwhite- border- tac">
+    <div json="true" iterate="arts" datasource="../../../assets/json/arts.json" class="box cards gut3- br05- bcwhite- border- tac md_gtc1 xl_gtc2">
         <figure class="p2">
             <img class="w100 pb1" src="" jsonbefore="../../../" jsonget="image">
             <h5 jsonget="title"></h5>
